fix: corrigindo overflow-x

--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -1,6 +1,6 @@
 .background-container {
   background-color: var(--c12);
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
   padding: 1rem;
