--- a/containers/LandingPage/pages/HomeScreen/fragments/Banner/Banner.module.css
+++ b/containers/LandingPage/pages/HomeScreen/fragments/Banner/Banner.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  width: 100vw;
+  width: 100%;
   background: radial-gradient(var(--c12) 20%, var(--c9) 130%);
 }
 
