--- a/containers/LandingPage/pages/HomeScreen/fragments/OurPartners/OurPartners.module.css
+++ b/containers/LandingPage/pages/HomeScreen/fragments/OurPartners/OurPartners.module.css
@@ -1,6 +1,6 @@
 .background-container {
   background-color: var(--c0);
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
 }
